{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 7,
  "lineage": "38311ceb-4b5e-5403-46e1-0b403ad5a29c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713111531:internet-gateway/igw-016c204c6b973298d",
            "id": "igw-016c204c6b973298d",
            "owner_id": "339713111531",
            "tags": {
              "Name": "demo_IGW"
            },
            "tags_all": {
              "Name": "demo_IGW"
            },
            "vpc_id": "vpc-0c0c97f01f317eb35"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-016c204c6b973298d",
            "id": "r-rtb-07dd8bca17d7262e01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07dd8bca17d7262e0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo_IGW",
            "aws_route_table.my_route_table",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713111531:route-table/rtb-07dd8bca17d7262e0",
            "id": "rtb-07dd8bca17d7262e0",
            "owner_id": "339713111531",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "routing table for pulic subnet"
            },
            "tags_all": {
              "Name": "routing table for pulic subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0c97f01f317eb35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_assicate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d716bf6438e7827",
            "route_table_id": "rtb-07dd8bca17d7262e0",
            "subnet_id": "subnet-0bd38e0853c8ba0a4"
          },
          "dependencies": [
            "aws_route_table.my_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713111531:subnet/subnet-0bd38e0853c8ba0a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd38e0853c8ba0a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713111531",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0c0c97f01f317eb35"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713111531:vpc/vpc-0c0c97f01f317eb35",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c537c16455aea41",
            "default_route_table_id": "rtb-05f152399565ab246",
            "default_security_group_id": "sg-046b380f769edced6",
            "dhcp_options_id": "dopt-055b58ca10809235f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c0c97f01f317eb35",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05f152399565ab246",
            "owner_id": "339713111531"
          }
        }
      ]
    }
  ]
}